// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseFunctionality basic insert all new events 1`] = `
[
  [
    "1/2 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "DB",
          "type": "HealthCheck_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "AppName",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "AppInstance",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "both",
          "type": "AppSpecific_PERIODIC",
        },
      ],
    },
  ],
  [
    "2/2 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "UTC",
          "type": "TimeSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "Local",
          "type": "TimeSpecific_PERIODIC",
        },
        {
          "interval": 86400,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "DELETE_EVENTS",
          "type": "EVENT_QUEUE_BASE_PERIODIC",
        },
      ],
    },
  ],
]
`;

exports[`baseFunctionality basic insert all new events 2`] = `
[
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
]
`;

exports[`baseFunctionality delta insert 1`] = `
[
  [
    "1/2 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "DB",
          "type": "HealthCheck_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "AppName",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "AppInstance",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "both",
          "type": "AppSpecific_PERIODIC",
        },
      ],
    },
  ],
  [
    "2/2 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "UTC",
          "type": "TimeSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "Local",
          "type": "TimeSpecific_PERIODIC",
        },
        {
          "interval": 86400,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "DELETE_EVENTS",
          "type": "EVENT_QUEUE_BASE_PERIODIC",
        },
      ],
    },
  ],
  [
    "1/1 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "DB2",
          "type": "HealthCheck_PERIODIC",
        },
      ],
    },
  ],
]
`;

exports[`baseFunctionality delta insert 2`] = `
[
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
]
`;

exports[`baseFunctionality if periodic event is in progress - no insert should happen 1`] = `
[
  [
    "1/2 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "DB",
          "type": "HealthCheck_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "AppName",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "AppInstance",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "both",
          "type": "AppSpecific_PERIODIC",
        },
      ],
    },
  ],
  [
    "2/2 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "UTC",
          "type": "TimeSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "Local",
          "type": "TimeSpecific_PERIODIC",
        },
        {
          "interval": 86400,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "DELETE_EVENTS",
          "type": "EVENT_QUEUE_BASE_PERIODIC",
        },
      ],
    },
  ],
]
`;

exports[`baseFunctionality if periodic event is in progress - no insert should happen 2`] = `
[
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 1,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 1,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 1,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 1,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 1,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 1,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 1,
  },
]
`;

exports[`baseFunctionality interval changed 1`] = `
[
  [
    "1/2 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "DB",
          "type": "HealthCheck_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "AppName",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "AppInstance",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "both",
          "type": "AppSpecific_PERIODIC",
        },
      ],
    },
  ],
  [
    "2/2 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "UTC",
          "type": "TimeSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "Local",
          "type": "TimeSpecific_PERIODIC",
        },
        {
          "interval": 86400,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "DELETE_EVENTS",
          "type": "EVENT_QUEUE_BASE_PERIODIC",
        },
      ],
    },
  ],
  [
    "deleting periodic events because they have changed",
    {
      "changedEvents": [
        {
          "subType": "DB",
          "type": "HealthCheck_PERIODIC",
        },
        {
          "subType": "AppName",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "subType": "AppInstance",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "subType": "both",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "subType": "UTC",
          "type": "TimeSpecific_PERIODIC",
        },
        {
          "subType": "Local",
          "type": "TimeSpecific_PERIODIC",
        },
      ],
    },
  ],
  [
    "1/2 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 10,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "DB",
          "type": "HealthCheck_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "AppName",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "AppInstance",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "both",
          "type": "AppSpecific_PERIODIC",
        },
      ],
    },
  ],
  [
    "2/2 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "UTC",
          "type": "TimeSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "Local",
          "type": "TimeSpecific_PERIODIC",
        },
      ],
    },
  ],
]
`;

exports[`baseFunctionality interval changed 2`] = `
[
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:30.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
]
`;

exports[`baseFunctionality startTime should use UTC time for event start 1`] = `
[
  [
    "1/2 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "DB",
          "type": "HealthCheck_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "AppName",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "AppInstance",
          "type": "AppSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "both",
          "type": "AppSpecific_PERIODIC",
        },
      ],
    },
  ],
  [
    "2/2 | inserting chunk of changed or new periodic events",
    {
      "events": [
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "UTC",
          "type": "TimeSpecific_PERIODIC",
        },
        {
          "interval": 30,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "Local",
          "type": "TimeSpecific_PERIODIC",
        },
        {
          "interval": 86400,
          "startAfter": "2023-11-13T11:00:00.000Z",
          "subType": "DELETE_EVENTS",
          "type": "EVENT_QUEUE_BASE_PERIODIC",
        },
      ],
    },
  ],
]
`;

exports[`baseFunctionality startTime should use UTC time for event start 2`] = `
[
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
  {
    "attempts": 0,
    "startAfter": "2023-11-13T11:00:00.000Z",
    "status": 0,
  },
]
`;
